--- a/happyblindglish/pubspec.yaml
+++ b/happyblindglish/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   sqflite: ^2.4.1
-  go_router: ^14.6.3
+  round_spot: ^0.5.0
+  path_provider: ^2.1.5
+  flutter_tts: ^4.2.1
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
