--- a/happyblindglish/pubspec.yaml
+++ b/happyblindglish/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   round_spot: ^0.5.0
   path_provider: ^2.1.5
   flutter_tts: ^4.2.1
-  speech_to_text: ^7.0.0
+  flutter_bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
