--- a/happyblindglish/pubspec.yaml
+++ b/happyblindglish/pubspec.yaml
@@ -43,7 +43,10 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   audioplayers: ^6.2.0
   flutter_accessibility_service: ^0.2.5
-  vibration: ^1.7.4
+  vibration: ^3.1.3
+  speech_to_text: ^7.0.0
+  permission_handler: ^11.4.0
+  dart_levenshtein: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
